Updating the simple-server demo

--- a/c++/libvnc/data/simple-server.cfg
+++ b/c++/libvnc/data/simple-server.cfg
@@ -5,12 +5,16 @@
 #   Purpose: Simple Server Configuration File
 #
 
+#  Network Port
+NETWORK_PORT=5999
+
 #  Screen Width in Pixels
-SCREEN_WIDTH=1920
+SCREEN_WIDTH=640
 
 #  Screen Height in Pixels
-SCREEN_HEIGHT=1080
+SCREEN_HEIGHT=480
 
+#  Bit Depth per Channel
 BITS_PER_SAMPLE=8
 
 SAMPLES_PER_PIXEL=3
