--- a/c++/opencl/coordinate_converter/src/libConvert02/CMakeLists.txt
+++ b/c++/opencl/coordinate_converter/src/libConvert02/CMakeLists.txt
@@ -4,7 +4,7 @@
 #
 
 #  Define the project
-project(LIB_OPENCL_CONVERT_01)
+project(LIB_OPENCL_CONVERT_02)
 
 #---------------------------------#
 #-     Change the Output Path    -#
@@ -15,16 +15,21 @@ SET( LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../lib )
 #  Include Lib-Coordinate Headers
 include_directories(../libCoordinate)
 
+find_package( OpenCL REQUIRED )
+
 #  Define the sources
-set( OPENCL_CONVERT_01_SOURCES
+set( OPENCL_CONVERT_02_SOURCES
         OpenCL_Convert_02.cpp
-        OpenCL_Convert_01.hpp
+        OpenCL_Convert_02.hpp
+        OpenCL_Utilities.cpp
+        OpenCL_Utilities.hpp
 )
 
 
 #  Build the library
-add_library( OpenCLConvert01
-             ${OPENCL_CONVERT_01_SOURCES} )
+add_library( OpenCLConvert02
+             ${OPENCL_CONVERT_02_SOURCES} )
 
-target_link_libraries( OpenCLConvert01
-                        Coordinate )
+target_link_libraries( OpenCLConvert02
+                        Coordinate
+                        ${OpenCL_LIBRARY} )
