Starting to replace the Image-Browser logic with the ArcGIS code.

--- a/geographic/image-browser/CMakeLists.txt
+++ b/geographic/image-browser/CMakeLists.txt
@@ -10,12 +10,15 @@
 cmake_minimum_required( FATAL_ERROR VERSION 2.8 )
 
 #  Set the Project Name
-project( ImageBrowser )
+project( Geo-Data-Manager )
 
-
+LIST( APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules")
 
 #-------------------------------------------#
-#  Configure Qt5
+#-             Configure Qt5               -#
+#-------------------------------------------#
+
+LIST( APPEND CMAKE_MODULE_PATH "$ENV{QT5_ROOT}/lib/cmake")
 
 # Find includes in corresponding build directories
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
@@ -24,95 +27,53 @@ set(CMAKE_AUTOMOC ON)
 
 # Find the QtWidgets library
 find_package(Qt5Widgets REQUIRED)
-find_package(Qt5WebEngine REQUIRED)
-find_package(Qt5WebEngineWidgets REQUIRED)
-find_package(Qt5WebSockets REQUIRED )
+find_package(Qt5Network REQUIRED)
+find_package(Qt5OpenGL  REQUIRED)
 
 
-#----------------------------------#
-#-         Configure GDAL         -#
-#----------------------------------#
-FIND_PACKAGE( GDAL REQUIRED )
-include_directories( ${GDAL_INCLUDE_DIR} )
+get_target_property(Qt5Widgets_LIBRARIES Qt5::Widgets LOCATION)
+message("Qt5::Widgets: ${Qt5Widgets_LIBRARIES}")
 
+#---------------------------------#
+#-      Configure ArcGIS SDK     -#
+#---------------------------------#
+find_package(ArcGIS_SDK)
 
-#----------------------------------#
-#-         Configure Boost        -#
-#----------------------------------#
-Find_Package(Boost
-                COMPONENTS
-                    date_time
-                    regex
-                        system
-                        filesystem
-                    REQUIRED
-)
-include_directories( ${Boost_INCLUDE_DIRS} )
-message("Boost Libraries: ${Boost_LIBRARIES}")
-message("Boost Includes : ${Boost_INCLUDE_DIRS}")
-
+message("ArcGIS_SDK Found")
+message("   - ArcGIS_SDK_INCLUDE_DIR: ${ArcGIS_SDK_INCLUDE_DIR}")
+message("   - ArcGIS_SDK_LIBRARIES:   ${ArcGIS_SDK_LIBRARIES}" )
+include_directories(${ArcGIS_SDK_INCLUDE_DIR})
 
 
 #---------------------------------#
 #-      Define our Sources       -#
 #---------------------------------#
-set( IMAGE_BROWSER_SOURCES
-     src/imagebrowser.cpp
-     src/core/DataContainer.cpp
-     src/core/FilesystemUtilities.cpp
-     src/core/GDALLoader.cpp
-     src/core/Image.cpp
-     src/core/ImageDatabase.cpp
-     src/core/Log_Utilities.cpp
-     src/core/MessagingService.cpp
-     src/core/Overlay.cpp
-     src/core/Point.cpp
-     src/core/Rect.cpp
-     src/core/StringUtilities.cpp
-     src/gui/AssetPane.cpp
-     src/gui/BrowserPage.cpp
-     src/gui/BrowserPane.cpp
-     src/gui/IndexingProgressDialog.cpp
-     src/gui/IndexingWorker.cpp
-     src/gui/MainWindow.cpp
-     src/gui/PreferenceDialog.cpp
+set( GEO_DATA_MANAGER_SOURCES
+        src/geo-data-manager.cpp
+        src/asset/Asset_Manager.cpp
+        src/core/Geo_Options.cpp
+        src/gui/Main_Window.cpp
+        src/gui/asset_panel/Asset_Panel.cpp
 )
 
 
 
-set( IMAGE_BROWSER_HEADERS
-     src/core/DataContainer.hpp
-     src/core/Enumerations.hpp
-     src/core/FilesystemUtilities.hpp
-     src/core/Image.hpp
-     src/core/ImageDatabase.hpp
-	 src/core/GDALLoader.hpp
-     src/core/Log_Utilities.hpp
-     src/core/MessagingService.hpp
-     src/core/Overlay.hpp
-	 src/core/Point.hpp
-     src/core/Rect.hpp
-	 src/core/StringUtilities.hpp
-     src/gui/AssetPane.hpp
-     src/gui/BrowserPage.hpp
-     src/gui/BrowserPane.hpp
-     src/gui/IndexingProgressDialog.hpp
-     src/gui/IndexingWorker.hpp
-     src/gui/MainWindow.hpp
-     src/gui/PreferenceDialog.hpp
+set( GEO_DATA_MANAGER_HEADERS
+        src/asset/Asset_Manager.hpp
+        src/core/Geo_Options.hpp
+        src/gui/Main_Window.hpp
+        src/gui/asset_panel/Asset_Panel.hpp
 )
 
 
-add_executable( image_browser
-                ${IMAGE_BROWSER_SOURCES}
-                ${IMAGE_BROWSER_HEADERS} )
+add_executable( geo-data-manager
+                ${GEO_DATA_MANAGER_SOURCES}
+                ${GEO_DATA_MANAGER_HEADERS} )
 
 # Use the Widgets module from Qt 5.
-target_link_libraries( image_browser
+target_link_libraries( geo-data-manager
+                       Qt5::Network
+                       Qt5::OpenGL
                        Qt5::Widgets
-                       Qt5::WebEngine
-                       Qt5::WebEngineWidgets
-                       Qt5::WebSockets
-                       ${GDAL_LIBRARY}
-                       ${Boost_LIBRARIES}
+                       ${ArcGIS_SDK_LIBRARIES}
 )
