--- a/opencv/data/stab-checker.cfg
+++ b/opencv/data/stab-checker.cfg
@@ -4,3 +4,14 @@
 
 #  Initial Frame to Show
 START_FRAME=1
+
+#  Size of the box we draw around each reference point
+BOX_OFFSET=100
+
+#  Number of frames to skip per frame
+FRAME_SKIP_COUNT=50
+
+#  Some videos have incorrect metadata.  This is a stopgap
+MAX_FRAMES=1029
+
+#  Keep this on the end of the file
