More work on resource-manager.

--- a/c++/resource_manager/CMakeLists.txt
+++ b/c++/resource_manager/CMakeLists.txt
@@ -4,7 +4,7 @@ project( resource_manager_demo )
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable( resource_manager_dmeo
+add_executable( resource_manager_demo
                 demo.cpp
-                Resource_Manager.cpp
-                Resource_Manager.hpp )
+                Resource_Manager.hpp
+                SomeBlob.hpp )
